--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/gohugo-theme-ananke"]
 	path = themes/gohugo-theme-ananke
 	url = git@github.com:theNewDynamic/gohugo-theme-ananke.git
+[submodule "delia-03/themes/gohugo-theme-ananke"]
+	path = delia-03/themes/gohugo-theme-ananke
+	url = git@github.com:theNewDynamic/gohugo-theme-ananke.git
